Part 3 of server rewrite, replaced Javalin